force-app/main/default/objects/Missing_Animal__c/Missing_Animal__c.object-meta.xml
<CustomObject>
    <label>Missing Animal</label>
    <nameField>
        <label>Missing Animal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missing Animals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>