force-app/main/default/objects/Missing_Animal__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Missing Animals</relationshipLabel>
    <relationshipName>Missing_Animals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>