force-app/main/default/objects/Missing_Animal__c/fields/Missing_Date__c.field-meta.xml
<CustomField>
    <fullName>Missing_Date__c</fullName>
    <label>Missing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>