force-app/main/default/objects/Missing_Animal__c/fields/Missing_Description__c.field-meta.xml
<CustomField>
    <fullName>Missing_Description__c</fullName>
    <description>Okoliczności zaginięcia</description>
    <label>Missing Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>